--- a/merchex/listings/templates/listings/base.html
+++ b/merchex/listings/templates/listings/base.html
@@ -8,6 +8,9 @@
 
         <nav>
             <a href="{% url 'band-list' %}">Groupes</a>
+            <a href="{% url 'song-list' %}">Chansons</a>
+            <a href="{% url 'contact' %}">Contact</a>
+            <a href="{% url 'a-propos' %}">A propos</a>
           </nav>
           
         {% block content %}
