--- a/merchex/listings/static/listings/styles.css
+++ b/merchex/listings/static/listings/styles.css
@@ -1,3 +1,9 @@
 * {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
+.errorlist { 
+    margin-bottom: -10px;
+}
+.errorlist li{
+    color: red;
+}
