--- a/merchex/listings/templates/listings/band_detail.html
+++ b/merchex/listings/templates/listings/band_detail.html
@@ -10,5 +10,7 @@
             {% endif %}
         </ul>
        <p>{{band.biography}}</p>
-       <p><a href="{% url 'band-list' %}">Retour à tous les groupes</a></p>
+       <p><a href="{% url 'band-update' band.id %}">Modifier ce groupe</a>
+        <a href="{% url 'band-delete' band.id %}">Supprimer ce groupe</a>
+       <a href="{% url 'band-list' %}">Retour à tous les groupes</a></p>
 {% endblock %}
