--- a/merchex/listings/templates/listings/band_list.html
+++ b/merchex/listings/templates/listings/band_list.html
@@ -1,9 +1,14 @@
 {% extends 'listings/base.html' %}
 {% block content%}
         <h1>Groupes</h1>
+        <p>
+            <a href="{% url 'band-create' %}">Créer un nouveau groupe</a>
+        </p>
         <ul>
             {% for band in bands %}
-                <li><a href="{% url 'band-detail' band.id %}">{{band.name}}</a></li>
+                <li><a href="{% url 'band-detail' band.id %}">{{band.name}}</a>
+                    - <a href="{% url 'band-update' band.id %}">[Editer]</a>
+                    - <a href="{% url 'band-delete' band.id %}">[Supprimer]</a></li>
             {% endfor %}
         </ul>
        
